--- a/lectures/01-01-en.tex
+++ b/lectures/01-01-en.tex
@@ -1,4 +1,4 @@
-\documentclass{article}
+\documentcls{article}
 
 \usepackage[utf8]{inputenc}
 \usepackage[english,russian]{babel}
@@ -504,7 +504,7 @@ consider this object in details later, for now it is sufficient to know that int
 directly runs a program in some representation~--- in our case, in the form of AST,~--- according to the semantics of the language. 
 The presence of interpreter plays an important role from both educational and technological standpoints. First,
 the implementation of interpreter facilitates the internalization of formal semantics description method which
-we use, namely~--- big-step operational semantics. Next, it allows to find and eiminate some errors 
+we use, namely~--- big-step operational semantics. Next, it allows to find and eliminate some errors 
 at early stage. The implementation of interpreter is rather a simple task, and it is advantageous to be capable of running program
 at early stages of compiler implementation.
 
@@ -556,7 +556,7 @@ the \textsc{GCC} infrastructure to be finally transformed into an object module.
 	     ret
 \end{lstlisting}
 
-Thus, from the architectural point of view, syntax analyser constitutes a fronted, while compilers for
+Thus, from the architectural point of view, syntax analyser constitutes a frontend, while compilers for
 stack machine and \texttt{x86}~--- a backend.
 
 \end{document}
