--- a/lectures/01.tex
+++ b/lectures/01.tex
@@ -61,10 +61,10 @@ programming language is unacceptable.
 \label{intro-semantics}
 
 The drastic difference between natural and programming languages manifests itself in a full bloom on the semantic level. Unlike natural languages,
-for programming languages there are ways to formally specify their semantics and acquire a \emph{mathematically proven} results.
+for programming languages there are ways to formally specify their semantics and acquire a <i>mathematically proven results.
 
 Why formal semantics matters? While in a common practice of using programming languages for application-level software we can rely on our vague, fuzzy
-understanding of the meanings of their constructs, when we develop system-level programming \emph{tools}, in particular, compilers, this understanding
+understanding of the meanings of their constructs, when we develop system-level programming <i>tools, in particular, compilers, this understanding
 turns out to be insufficient. Imagine, for example, that we know that in some programming language expressions consist of variables, constant and four
 arithmetic operators. Is this knowledge is complete?
 
